# star_tracker_simulator

./: CMakeLists.txt  FragmentShader.fragmentshader  Makefile  README.md  RSO.hpp  Star.cpp  Star.hpp  VertexShader.vertexshader  hip_parser.cpp  hip_parser.hpp  shader.cpp  shader.hpp  star_sketch.py  star_tracker_input.cpp
Hipparcos/: I_311.tar.gz.part
